<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentcatches"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    app:cardBackgroundColor="#99ffffff"
    tools:context=".Fragments.CatchesFragment"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="100dp">
        <TextView
            android:id="@+id/Date"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:hint="@string/date"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/catch_image"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_below="@id/Date"

            android:src="@drawable/no_image"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:id="@+id/Kilogramm"
            android:hint="@string/kilo"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/Date"/>
        <TextView
            android:id="@+id/text_view_temp"
            android:layout_toEndOf="@id/Kilogramm"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/temp"
            />

        <TextView
            android:id="@+id/text_view_pressure"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/text_view_temp"
            android:hint="@string/hintpressure" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>
